# SADIE

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVBOOK.md  Dockerfile  Dockerfile.backend  LICENSE  MAJ.md  README-SADIE-TOOLS.md  README.md  WORKINPROGRESS.md  alembic.ini  check-docker-network.ps1  clean-docker.ps1  conversation_gpt.md  data.csv  diagnostic-complet.ps1  diagnostic-sadie-simple.ps1  diagnostic-sadie.ps1  docker-compose.monitoring.yml  docker-compose.yml  fix-encoding.ps1  index.html  installer-sadie-tools.ps1  mkdocs.yml  optimize-dockerfile.ps1  optimize-network.ps1  optimize-package-json.ps1  optimize-sadie-system.ps1  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  restart-containers.ps1  restart-sadie-frontend.ps1  (+9 more)
.github/workflows/: ci.yml  debug.yml  docs.yml  main.yml  security.yml
SADIE/: .env.example  CHANGELOG.md  LICENSE  README.md  __init__.py  main.py  requirements-dev.txt  requirements.txt  roadmap.md  setup.py
SADIE/analysis/: README.md  __init__.py  advanced_cycles.py  backtesting.py  base.py  chart_patterns.py  charts.py  harmonic_patterns.py  indicators.py  market.py  market_cycles.py  pattern_cycles.py  statistical.py  statistics.py  technical.py  visualization.py
SADIE/config/: config.py
SADIE/core/: README.md  __init__.py  cache.py  metrics.py
SADIE/docs/: DEBUG.md  DEVBOOK.md  MAJ.md  PROJECT_CONTEXT.md  ROADMAP.md  WORKINPROGRESS.md  collectors.md  index.md  mkdocs.yml  orderbook.md  performance.md  technical_analysis.md  transactions.md
SADIE/examples/: data_collection.py  model_training.py
SADIE/storage/: __init__.py  base.py  database.py  redis.py
SADIE/utils/: __init__.py  config.py  decorators.py
SADIE/web/: README.md  __init__.py  app.py  app_auth.py  auth.py  mock_api.py  openapi.yaml  stream_manager.py
alembic/versions/: 001_initial_timescale_setup.py
benchmarks/: test_orderbook_performance.py  test_sentiment_performance.py
config/: .env.example  README.md  config.py  config.yaml  config.yml  prometheus.yml
crypto-tracker/: .env  .gitignore  DEVBOOK.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
crypto-tracker/prisma/: schema.prisma
crypto-tracker/src/: App.tsx  index.css  main.tsx  theme.ts
dashboards/: cache.json  overview.json  trades.json
docs/: analysis.md  architecture.md  backtesting.md  collectors.md  completion_summary.md  consolidation_plan.md  contributing.md  examples.md  guide_demarrage_rapide.md  guide_test_utilisateur.md  index.md  metrics.md  metrics_advanced.md  mise_a_jour_juin_2024.md  models.md  monitoring.md  performance.md  roadmap.md  security.md  sentiment.md  sentiment_collector.md  sentiment_guide.md  technical.md  technical_analysis.md
docs/api/: README.md  analysis.md  metrics.md
docs/development/: contributing.md  monitoring.md
docs/user-guide/: configuration.md  installation.md  usage.md
examples/: README.md  advanced_cycles_example.py  analysis_example.py  analyze_data.py  analyze_market_sentiment.py  analyze_sentiment.py  analyze_sentiment_price.py  arbitrage_detector.py  backtest_example.py  chart_patterns_example.py  collect_orderbook.py  collect_sentiment.py  collector_example.py  dual_storage_example.py  harmonic_patterns_example.py  kraken_example.py  market_aggregator.py  market_cycles_example.py  metrics_advanced_example.py  multi_exchange_example.py  orderbook_example.py  pattern_cycles_example.py  sentiment_news.py  sentiment_reddit.py  sentiment_twitter.py  simple_analysis.py  simple_test.py  statistical_analysis.py  storage_example.py  streaming_example.py  test_database.py  test_redis.py  trades_example.py  visualize_sentiment.py
examples/assets/: style.css
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json  tradingview.css
frontend/src/: App.tsx  index.css  index.tsx
grafana/dashboards/: sadie_overview.json
migrations/: env.py
migrations/versions/: 64f53cdea98c_initial_database_schema.py
prisma/: schema.prisma
prometheus/: prometheus.yml
prometheus/rules/: sadie_alerts.yml
requirements/: base.txt  dev.txt  prod.txt  sentiment.txt
rules/: alerts.yml
scripts/: backup.py  create_database.sql  install_postgres_windows.ps1  install_security_hooks.py  migrate_sadie_imports.py  run_monitoring.py  run_web.py  security_check.py  test_user_flow.py  validate_dependencies.py  validate_project.py
src/: App.tsx  index.css  index.html  main.tsx  types.ts
src/components/: AlertList.tsx  AppLayout.tsx  Chart.tsx  ChartContainer.tsx  ChartTest.tsx  ChartToolbar.tsx  DrawingToolbar.tsx  Logo.tsx  PriceChart.tsx  TechnicalIndicators.tsx  TopTickers.tsx
src/context/: WebSocketContext.test.tsx
src/contexts/: ChartSyncContext.tsx
src/data/: DataManager.ts  config.ts  example.ts  types.ts
src/hooks/: useChartAnimation.ts  useChartSync.ts  useMarketData.ts  useWebSocket.ts
src/old/: ChartTest.tsx
src/renderer/: CandlestickRenderer.ts  ChartRenderer.ts  DrawingTools.ts  VolumeRenderer.ts
src/renderers/: CandlestickRenderer.ts
src/sadie/: __init__.py
src/scripts/: initializeDataCollection.ts
src/services/: api.ts  candles.ts
src/styles/: global.css
src/types/: index.ts  indicators.ts
src/utils/: arrayUtils.ts  dateUtils.ts  indicators.ts
tests/: __init__.py  test_orderbook_collector.py  test_sentiment_collector.py  test_trades_collector.py
tests/integration/: test_collector_storage.py  test_data_pipeline.py  test_database_connection.py  test_metrics_integration.py  test_metrics_monitoring.py  test_multi_collector.py  test_orderbook_integration.py  test_repositories.py  test_sentiment_collector.py  test_sentiment_integration.py  test_storage_resilience.py
tests/load/: test_collectors_load.py
tests/performance/: test_collectors_performance.py  test_memory.py  test_trade_collector.py
tests/resilience/: test_collectors_resilience.py  test_trade_collector.py
tests/stress/: test_trade_collector.py  test_trade_collector_performance.py  (+1 more)
(+289 files in other folders)
